base/management/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.local`)
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: argocd-server-https
  tls: {}
